Improvements to the course home page: Fix of overlapping module button and text. Some other improvements also. Some small improvements to the new UI design

--- a/src/css/framework/canvas-rightside-newui.less
+++ b/src/css/framework/canvas-rightside-newui.less
@@ -4,6 +4,19 @@
         
         #right-side {
             padding-top: 70px;
+            
+            #course_show_secondary {
+                
+                h2 {
+                    padding-left: 12px;
+                    padding-right: 12px;
+                }
+
+                ul {
+                    padding-left: 12px;
+                    padding-right: 12px;
+                }
+            }
         }
     }
 }
@@ -29,5 +42,21 @@
                 }
             }
         }
+        
+        .page-action-list {
+
+            li {
+
+                a {
+                    
+                    &:hover {
+                        color: #fff;
+                        background-image: linear-gradient(-180deg,#70a6b8 0,#296073 100%)!important;
+                        text-decoration: none;
+                    }
+                }
+            }
+        }
     }
 }
+
